# rules_protoc_gen

./: .bazelrc  BUILD.bazel  LICENSE  README.md  WORKSPACE  def.bzl  go.mod  go.sum  protoc.bzl  providers.bzl
docs/: BUILD.bazel  README.md.template  header.vm
protoc/: BUILD.bazel  plugin.bzl  protoc.bzl  providers.bzl
test/: BUILD.bazel  plugin.go
test/data/: BUILD.bazel  data.proto  data_plugin.go
test/plugin_out/myapi/hello/: BUILD.bazel  world.proto
test/protoc_output/data/: BUILD.bazel  data_plugin.go  testdata.txt
test/protoc_output/plugin_out/myapi/hello/: BUILD.bazel
test/protoc_output/protos/: BUILD.bazel  a.proto
test/protoc_output/protos/c/: BUILD.bazel  c.proto
test/protoc_plugin/: BUILD.bazel  README.md  data_plugin.go  executable_runfiles_plugin.go  foo.proto
test/protos/: BUILD.bazel  b.proto
test/protos/c/: BUILD.bazel  c.proto
