load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/fischor/rules_proto_simple
# gazelle:go_generate_proto false

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

stardoc(
    name = "docs",
    out = "protoc.md",
    input = "protoc.bzl",
    symbol_names = [
        "protoc_output",
    ],
    deps = [":paths"],
)

bzl_library(
    name = "paths",
    srcs = ["@bazel_skylib//lib:paths.bzl"],
)

gazelle(
    name = "gazelle",
    mode = "diff",
)

gazelle(
    name = "gazelle_fix",
)
