load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_lib",
    srcs = ["plugin.go"],
    importpath = "github.com/fischor/rules_proto_simple/test",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_google_protobuf//compiler/protogen"],
)

go_binary(
    name = "plugin",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)
