load("@rules_proto//proto:defs.bzl", "proto_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//:def.bzl", "protoc_output")

proto_library(
    name = "protos_proto",
    srcs = [
        "a.proto",
        "b.proto",
    ],
    strip_import_prefix = "/test/protoc_output",
    visibility = ["//visibility:public"],
)

protoc_output(
    name = "protos_test_output",
    plugin = "//test:plugin",
    protos = [":protos_proto"],
)

build_test(
    name = "protos_build_test",
    targets = [
        ":protos_test_output",
    ],
)
