load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:def.bzl", "protoc_output")

proto_library(
    name = "c_proto",
    srcs = ["c.proto"],
    strip_import_prefix = "/test/protoc_output",
    visibility = ["//visibility:public"],
    deps = ["//test/protoc_output/protos:protos_proto"],
)

# This test case assures that dependencies for proto_libraries are passed
# to the protoc.
protoc_output(
    name = "c_testfile_output",
    plugin = "//test:plugin",
    protos = [":c_proto"],
)

build_test(
    name = "c_build_test",
    targets = [
        ":c_testfile_output",
    ],
)
