load("@rules_proto//proto:defs.bzl", "proto_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//:def.bzl", "protoc_output")

# gazelle:proto_strip_import_prefix /test/protoc_output/plugin_out

proto_library(
    name = "hello_proto",
    srcs = ["world.proto"],
    strip_import_prefix = "/test/protoc_output/plugin_out",
    visibility = ["//visibility:public"],
)

protoc_output(
    name = "plugin_out_test",
    plugin = "//test:plugin",
    plugin_out = "test/plugin_out",
    protos = [":hello_proto"],
)

build_test(
    name = "hello_build_test",
    targets = [
        ":plugin_out_test",
    ],
)
